crates/nirvash-macros/tests/fixtures/code_tests_legacy_action.stderr
error: action = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_action.rs:129:46
    |
129 | #[code_tests(spec = Spec, binding = Binding, action = Action)]
    |                                              ^^^^^^
